--- a/GettingPageStuff/nbproject/project.properties
+++ b/GettingPageStuff/nbproject/project.properties
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=gettingpagestuff.AddingToDataBase
+main.class=TextbookPriceComparison.AddingToDataBase
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
